@startuml
top to bottom direction
skinparam packageStyle rectangle
skinparam shadowing false

title Diagrama de Paquetes - Plataforma Agricultura Inteligente

package "Capa de Presentacion" as PRESENTACION {
  class CultivoController
  class UsuarioController
  class ReporteController
}

package "Capa de Logica de Negocio" as LOGICA_NEGOCIO {
  class CultivoService
  class RecomendacionService
  class NotificacionService
}

package "Capa de Persistencia" as PERSISTENCIA {
  class CultivoRepository
  class UsuarioRepository
  class InsumoRepository
  class Cultivo
  class Usuario
  class Insumo
  class Recomendacion
  class Notificacion
}

package "Capa de Acceso a Datos" as ACCESO_DATOS {
  class PostgreSQLConnector
  class DataSourceConfig
}

PRESENTACION ..> LOGICA_NEGOCIO
LOGICA_NEGOCIO ..> PERSISTENCIA
PERSISTENCIA ..> ACCESO_DATOS

' Orden visual vertical de arriba hacia abajo
PRESENTACION -down[hidden]-> LOGICA_NEGOCIO
LOGICA_NEGOCIO -down[hidden]-> PERSISTENCIA
PERSISTENCIA -down[hidden]-> ACCESO_DATOS

@enduml